--- a/src/assets/scss/base/_extends.scss
+++ b/src/assets/scss/base/_extends.scss
@@ -14,3 +14,8 @@
   display: flex;
   justify-content: space-between;
 }
+.flex-center-between {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
