--- a/src/assets/scss/base/_variables.scss
+++ b/src/assets/scss/base/_variables.scss
@@ -1,13 +1,16 @@
 $blue-1: #00a9fd;
-$blue-2: #62c6f8;
+$blue-2: #027ff3;
 $blue-3: #81d1f9;
 $blue-4: #d9e4e9;
 $yellow-light: #f3e8db;
 $red-deep: #B20000;
-$green-1: #80ce11;
-$green-2: #bbea60;
+// $green-1: #80ce11;
+// $green-2: #bbea60;
+$green-1: #13b86b;
+$green-2: #0fef87;
+$green-3: #057449;
 $white-1: #ffffff;
-$white-2: #afadad;
+$white-2: #9e9c9c;
 $black-light: #292828;
 $font-UTM: "UTM Avo", Arial, Helvetica;
 $font-UTMbold: "UTMAvoBold", Arial, Helvetica;
@@ -34,7 +37,8 @@ $color: (
   secondary: $white-2,
   normal: $black-light,
   accent: $green-2,
-  default: $white-1
+  default: $white-1,
+  hover: $blue-2,
 );
 $bg-color: (
   primary: $green-2,
@@ -51,5 +55,6 @@ $bd-color: (
 $btn-color: (
   primary: $green-2,
   secondary: $blue-3,
-  hover: $green-1
+  hover: $green-1,
+  active: $green-3
 )
