--- a/src/assets/scss/layout/_product.scss
+++ b/src/assets/scss/layout/_product.scss
@@ -28,18 +28,42 @@
   &-image {
     img {
       width: 100%;
-      height: 300px;
+      height: 250px;
       object-fit: cover;
     }
   }
   &-card {
     text-align: center;
     padding: 20px;
+    height: 200px;
+    .wrap {
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
     .btn-add {
       font-size: 16px;
       .fa-cart-plus {
         margin-left: 8px;
       }
+      color: #000;
+      background-color: map-get($map: $bg-color, $key: accent);
+      margin-top: 20px;
+      box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+      border-radius: 10px;
+      cursor: pointer;
+      transition: all 0.3s ease 0s;
+    }
+    .btn-add:hover {
+      transform: translateY(-5px);
+      background-color: map-get($map: $btn-color, $key: primary);
+      box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+      color: #ffffff;
+    }
+    .btn-add:active {
+      background-color: map-get($map: $btn-color, $key: active);
+      transition: all 0s ease 0s;
     }
   }
   &-name {
@@ -53,9 +77,9 @@
     line-height: 1.25;
   }
   &-price {
-    color: #f13636;
+    color: #f13636 !important;
     margin-top: 10px;
-    font-size: 16px;
+    font-size: 18px;
     font-weight: 700;
     &-discount {
       color: map-get($map: $color, $key: secondary);
@@ -64,16 +88,23 @@
     }
   }
   &-detail-wrap {
-    padding: 50px;
+    padding: 100px 0;
+    .title {
+      margin-bottom: 8px;
+      span {
+      display: inline-block;
+      width: 100px;
+      color: map-get($map: $color, $key: secondary);
+      }
+    }
     .product-card {
       @include flex-style(flex, true, true, true);
     }
     .product-image {
+      width: 300px;
       height: 300px;
-    }
-    .product-price {
-      margin-top: 20px;
-      font-weight: 700;
+      object-fit: cover;
+      margin-right: 50px;
     }
     .btn {
       margin-top: 20px;
