--- a/src/assets/scss/modules/_buttons.scss
+++ b/src/assets/scss/modules/_buttons.scss
@@ -7,7 +7,11 @@
   &-primary {
     background-color: map-get($map: $btn-color, $key: primary);
     &:hover {
-      background-color: map-get($map: $btn-color, $key: hover);;
+      background-color: map-get($map: $btn-color, $key: hover);
+    }
+    &:active {
+      transition: all 0s ease 0s;
+      background-color: map-get($map: $btn-color, $key: active);
     }
   }
 }
