--- a/src/assets/scss/modules/_form.scss
+++ b/src/assets/scss/modules/_form.scss
@@ -38,3 +38,30 @@ form {
     margin-bottom: 15px;
   }
 }
+.text-group {
+  .title {
+    color: map-get($map: $color, $key: secondary);
+  }
+}
+.form-search {
+  width: 200px;
+  position: relative;
+  input {
+    padding-right: 35px;
+    border-radius: 12px !important;
+    &:focus {
+      box-shadow: 0px 0px 10px 3px #9e9c9c;
+      transition: box-shadow 0.3s ease-in-out;
+    }
+  }
+  .btn-search {
+    &:hover {
+      cursor: pointer;
+    }
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 10px;
+    color: map-get($map: $color, $key: secondary);
+  }
+}
