--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -125,7 +125,7 @@
     z-index: -1;
     visibility: hidden;
     top: 20px;
-    left: 10px;
+    left: 0;
     background-color: map-get($map: $bg-color, $key: primary);
   }
   .cart-number-wrap {
@@ -135,6 +135,13 @@
       color: map-get($map: $color, $key: primary);
       top: -10px;
       right: 0;
+    }
+  }
+  &-item:first-child {
+    padding-right: 10px;
+    &:hover {
+      color: map-get($map: $color, $key: primary);
+      cursor: pointer;
     }
   }
 }
