--- a/src/assets/scss/layout/_product.scss
+++ b/src/assets/scss/layout/_product.scss
@@ -12,6 +12,11 @@
     overflow: hidden;
     border: 1px solid map-get($map: $bd-color, $key: default);
     border-radius: 10px;
+    // box-shadow: 0px 0px 5px 0px #b3b3b3;
+    // box-sizing: border-box;
+    &:hover {
+      box-shadow: 0px 0px 5px 2px #888888;
+    }
     .btn {
       .fa-heart {
         margin-top: 10px;
@@ -34,7 +39,7 @@
   }
   &-card {
     text-align: center;
-    padding: 20px;
+    padding: 5px;
     height: 200px;
     .wrap {
       height: 100%;
@@ -50,7 +55,7 @@
       color: #000;
       background-color: map-get($map: $bg-color, $key: accent);
       margin-top: 20px;
-      box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+      box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.2);
       border-radius: 10px;
       cursor: pointer;
       transition: all 0.3s ease 0s;
@@ -99,10 +104,25 @@
     }
     .product-card {
       @include flex-style(flex, true, true, true);
+      .btn-add {
+        color: map-get($map: $color, $key: default);
+        background-color: map-get($map: $btn-color, $key: primary);
+      }
+      .btn-add:active {
+        background-color: map-get($map: $btn-color, $key: active);
+        transition: all 0s ease 0s;
+      }
+    }
+    .product-wrap-content {
+      overflow: hidden;
+      border: 1px solid map-get($map: $bd-color, $key: default);
+      border-radius: 10px;
+      padding: 30px;
+      margin-top: 30px;
     }
     .product-image {
       width: 300px;
-      height: 300px;
+      height: 100%;
       object-fit: cover;
       margin-right: 50px;
     }
