--- a/src/assets/scss/base/_variables.scss
+++ b/src/assets/scss/base/_variables.scss
@@ -4,11 +4,12 @@ $blue-3: #81d1f9;
 $blue-4: #d9e4e9;
 $yellow-light: #f3e8db;
 $red-deep: #B20000;
-// $green-1: #80ce11;
-// $green-2: #bbea60;
-$green-1: #13b86b;
-$green-2: #0fef87;
-$green-3: #057449;
+// $green-1: #13b86b;
+// $green-2: #0fef87;
+// $green-3: #057449;
+$green-1: #d19209fa;
+$green-2: #e29f0fcb;
+$green-3: #c79408;
 $white-1: #ffffff;
 $white-2: #9e9c9c;
 $black-light: #292828;
