update history page

--- a/src/assets/scss/state/_state.scss
+++ b/src/assets/scss/state/_state.scss
@@ -9,7 +9,7 @@
 }
 
 .fs-24 {
-  font-size: 24px;
+  font-size: 24px !important;
 }
 
 .fs-18 {
@@ -34,6 +34,10 @@
 
 .mt-24 {
   margin-top: 24px;
+}
+
+.mt-32 {
+  margin-top: 32px;
 }
 
 .mt-40 {
