--- a/src/assets/scss/state/_state.scss
+++ b/src/assets/scss/state/_state.scss
@@ -6,6 +6,15 @@
 
 .section-about-us, .section-account {
   padding: 50px;
+  min-height: 576px;
+}
+
+.section-login {
+  min-height: 576px;
+}
+
+.section-cart {
+  min-height: 576px;
 }
 
 .fs-24 {
